--- a/AuthServer/pom.xml
+++ b/AuthServer/pom.xml
@@ -84,6 +84,9 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${project.parent.version}</version>
+                <configuration>
+                    <finalName>oauthApp-mysql</finalName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
