--- a/AuthServer/src/main/resources/application.properties
+++ b/AuthServer/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=9090
 #server.ssl.key-alias=tomcat
 #server.ssl.enabled=true
 #MYSQL
-spring.datasource.url=jdbc:mysql://localhost/oauth?useLegacyDatetimeCode=false&serverTimeZone=UTC
+spring.datasource.url=jdbc:mysql://oauth/oauth?useLegacyDatetimeCode=false&serverTimeZone=UTC
 spring.datasource.username=root
 spring.datasource.password=mysql
 spring.datasource.initialization-mode=always
